vininfo changelog
=================


Unreleased
----------
+ Added basic info for Nissan.


v0.1.0
------
+ Basic functionality.