@@ -1,4 +1,4 @@
-from .coachworks import *
+from .bodies import *
 from .countries import COUNTRIES
 from .regions import REGIONS
 from .wmi import WMI
