@@ -1,0 +1,7 @@
+# -*- encoding: utf-8 -*-
+from __future__ import unicode_literals
+
+
+BODY_HATCH = 'Hatchback'
+BODY_SW = 'Station Wagon'
+BODY_SEDAN = 'Sedan'
