@@ -1,7 +1,0 @@
-# -*- encoding: utf-8 -*-
-from __future__ import unicode_literals
-
-
-COACHWORK_HATCH = 'Hatchback'
-COACHWORK_SW = 'Station Wagon'
-COACHWORK_SEDAN = 'Sedan'
