@@ -5,6 +5,7 @@ vininfo changelog
 Unreleased
 ----------
 + Added basic info for Nissan.
+* Coachwork renamed to body.
 
 
 v0.1.0
